--- a/RAM0230_Project_group_1/RAM0230_Project_group_1.domain/RAM0230_Project_group_1.domain.csproj
+++ b/RAM0230_Project_group_1/RAM0230_Project_group_1.domain/RAM0230_Project_group_1.domain.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A586219-05AD-43BA-BFDB-945D26C1CE45}</ProjectGuid>
+    <ProjectGuid>{DE4DB725-4CB1-4E59-8EFA-4E7FB87AE7EE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RAM0230_Project_group_1.domain</RootNamespace>
@@ -52,75 +52,76 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="groups.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Context.cs">
+    <Compile Include="KolledzDBModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model1.cs">
+    <Compile Include="KolledzDBModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Designer.cs">
+    <Compile Include="KolledzDBModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="oppevorms.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="roles.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="students.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="subjects.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="subject_group.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="subject_student.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="subject_teacher.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="users.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="visits.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="Model1.edmx">
+    <EntityDeploy Include="KolledzDBModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+      <LastGenOutput>KolledzDBModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <None Include="Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
+    <None Include="KolledzDBModel.edmx.diagram">
+      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model1.Context.tt">
+    <Content Include="KolledzDBModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
+      <LastGenOutput>KolledzDBModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Model1.tt">
+    <Content Include="KolledzDBModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
+      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
+      <LastGenOutput>KolledzDBModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
