--- a/RAM0230_Project_group_1/RAM0230_Project_group_1.domain/App.Config
+++ b/RAM0230_Project_group_1/RAM0230_Project_group_1.domain/App.Config
@@ -4,9 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="KolledzDBEntities" connectionString="metadata=res://*/KolledzDBModel.csdl|res://*/KolledzDBModel.ssdl|res://*/KolledzDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_OlegB;user id=t160200ctf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="KolledzDBEntities" connectionString="metadata=res://*/KolledzDBModel.csdl|res://*/KolledzDBModel.ssdl|res://*/KolledzDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_OlegB;user id=t160200ctf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
