--- a/RAM0230_Project_group_1/RAM0230_Project_group_1.domain/RAM0230_Project_group_1.domain.csproj
+++ b/RAM0230_Project_group_1/RAM0230_Project_group_1.domain/RAM0230_Project_group_1.domain.csproj
@@ -51,36 +51,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="groups.cs">
+    <Compile Include="group.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="KolledzDBModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
       <DependentUpon>KolledzDBModel.Context.tt</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="KolledzDBModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="KolledzDBModel.Designer.cs">
-      <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
       <DependentUpon>KolledzDBModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="oppevorms.cs">
+    <Compile Include="oppevorm.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GroupsRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="roles.cs">
+    <Compile Include="role.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="students.cs">
+    <Compile Include="student.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="subjects.cs">
+    <Compile Include="subject.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="subject_group.cs">
@@ -92,40 +93,38 @@
     <Compile Include="subject_teacher.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="users.cs">
+    <Compile Include="user.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="visits.cs">
+    <Compile Include="visit.cs">
       <DependentUpon>KolledzDBModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
     <EntityDeploy Include="KolledzDBModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>KolledzDBModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.Config" />
     <None Include="KolledzDBModel.edmx.diagram">
       <DependentUpon>KolledzDBModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="KolledzDBModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
       <LastGenOutput>KolledzDBModel.Context.cs</LastGenOutput>
+      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
     </Content>
     <Content Include="KolledzDBModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
       <LastGenOutput>KolledzDBModel.cs</LastGenOutput>
+      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
