--- a/RAM0230_Project_group_1/Project.domain/Project.domain.csproj
+++ b/RAM0230_Project_group_1/Project.domain/Project.domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DE4DB725-4CB1-4E59-8EFA-4E7FB87AE7EE}</ProjectGuid>
+    <ProjectGuid>{A0BA4C24-800F-4F18-BECF-9080A1BB3B62}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RAM0230_Project_group_1.domain</RootNamespace>
-    <AssemblyName>RAM0230_Project_group_1.domain</AssemblyName>
+    <RootNamespace>Project.domain</RootNamespace>
+    <AssemblyName>Project.domain</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -52,79 +52,76 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="group.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="KolledzDBModel.Context.cs">
-      <DependentUpon>KolledzDBModel.Context.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
+    <Compile Include="KolledzDB.Context.cs">
       <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KolledzDB.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="KolledzDBModel.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
+    <Compile Include="KolledzDB.cs">
       <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="KolledzDBModel.Designer.cs">
-      <DesignTime>True</DesignTime>
+    <Compile Include="KolledzDB.Designer.cs">
       <AutoGen>True</AutoGen>
-      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KolledzDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="oppevorm.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GroupsRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\StudentsRepository.cs" />
+    <Compile Include="Repositories\SubjectsRepository.cs" />
+    <Compile Include="Repositories\UsersRepository.cs" />
+    <Compile Include="Repositories\VisitsRepository.cs" />
     <Compile Include="role.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
     <Compile Include="student.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
     <Compile Include="subject.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="subject_group.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="subject_student.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="subject_teacher.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
     <Compile Include="user.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
     <Compile Include="visit.cs">
-      <DependentUpon>KolledzDBModel.tt</DependentUpon>
+      <DependentUpon>KolledzDB.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
-    <EntityDeploy Include="KolledzDBModel.edmx">
+    <EntityDeploy Include="KolledzDB.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>KolledzDBModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>KolledzDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="KolledzDBModel.edmx.diagram">
-      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.Config" />
+    <None Include="KolledzDB.edmx.diagram">
+      <DependentUpon>KolledzDB.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Content Include="KolledzDB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>KolledzDB.edmx</DependentUpon>
+      <LastGenOutput>KolledzDB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="KolledzDB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>KolledzDB.edmx</DependentUpon>
+      <LastGenOutput>KolledzDB.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="KolledzDBModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>KolledzDBModel.Context.cs</LastGenOutput>
-      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
-    </Content>
-    <Content Include="KolledzDBModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>KolledzDBModel.cs</LastGenOutput>
-      <DependentUpon>KolledzDBModel.edmx</DependentUpon>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
