Infrastructure dev, some changes in Domain.Repository

--- a/RAM0230_Project_group_1/Project.Infrastructure.Database/Project.Infrastructure.Database.csproj
+++ b/RAM0230_Project_group_1/Project.Infrastructure.Database/Project.Infrastructure.Database.csproj
@@ -58,11 +58,14 @@
     <Compile Include="Connection\KolledzDBContext.cs" />
     <Compile Include="DataAccess\GroupsRepository.cs" />
     <Compile Include="DataAccess\OppevormsRepository.cs" />
+    <Compile Include="DataAccess\RolesRepository.cs" />
+    <Compile Include="DataAccess\StudentsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
