--- a/RAM0230_Project_group_1/Project.Domain.Repository/Project.Domain.Repository.csproj
+++ b/RAM0230_Project_group_1/Project.Domain.Repository/Project.Domain.Repository.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Base\IGetByKey.cs" />
     <Compile Include="Base\IReadRepository.cs" />
     <Compile Include="IGroupsRepository.cs" />
-    <Compile Include="IOppevormsRepository.cs" />
+    <Compile Include="IModeOfStudy.cs" />
     <Compile Include="IRolesRepository.cs" />
     <Compile Include="IStudentsRepository.cs" />
     <Compile Include="ISubjectsRepository.cs" />
