--- a/RAM0230_Project_group_1/Project.Infrastructure.Database/Project.Infrastructure.Database.csproj
+++ b/RAM0230_Project_group_1/Project.Infrastructure.Database/Project.Infrastructure.Database.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="Connection\KolledzDBContext.cs" />
     <Compile Include="DataAccess\GroupsRepository.cs" />
-    <Compile Include="DataAccess\OppevormsRepository.cs" />
+    <Compile Include="DataAccess\ModesOfStudyRepository.cs" />
     <Compile Include="DataAccess\RolesRepository.cs" />
     <Compile Include="DataAccess\StudentsRepository.cs" />
     <Compile Include="DataAccess\SubjectsRepository.cs" />
