--- a/RAM0230_Project_group_1/Project.Infrastructure.Database/Project.Infrastructure.Database.csproj
+++ b/RAM0230_Project_group_1/Project.Infrastructure.Database/Project.Infrastructure.Database.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DataAccess\RolesRepository.cs" />
     <Compile Include="DataAccess\StudentsRepository.cs" />
     <Compile Include="DataAccess\SubjectsRepository.cs" />
+    <Compile Include="DataAccess\SubjectTeachersRepository.cs" />
     <Compile Include="DataAccess\UnitOfWork.cs" />
     <Compile Include="DataAccess\UsersRepository.cs" />
     <Compile Include="DataAccess\VisitsRepository.cs" />
