--- a/RAM0230_Project_group_1/Project.Infrastructure.Database/App.config
+++ b/RAM0230_Project_group_1/Project.Infrastructure.Database/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="KolledzDB" connectionString="metadata=res://*/KolledzDBModel.csdl|res://*/KolledzDBModel.ssdl|res://*/KolledzDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_OlegB;user id=t160200ctf;password=t160200ctf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KolledzDBContext" connectionString="data source=mail.vk.edu.ee;initial catalog=db_OlegB;user id=t160200ctf;password=t160200ctf;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
