--- a/RAM0230_Project_group_1/Project.UI.App/App.config
+++ b/RAM0230_Project_group_1/Project.UI.App/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="KolledzDB" connectionString="metadata=res://*/KolledzDBModel.csdl|res://*/KolledzDBModel.ssdl|res://*/KolledzDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_OlegB;user id=t160200ctf;password=t160200ctf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KolledzDBContext" connectionString="data source=mail.vk.edu.ee;initial catalog=db_OlegB;user id=t160200ctf;password=t160200ctf;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
