--- a/RAM0230_Project_group_1/Project.UI.WebMVCApp/Project.UI.WebMVCApp.csproj
+++ b/RAM0230_Project_group_1/Project.UI.WebMVCApp/Project.UI.WebMVCApp.csproj
@@ -185,13 +185,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\IndexVisitViewModel.cs" />
+    <Compile Include="Models\VisitViewModels\PartialTeachersVisitViewModel.cs" />
+    <Compile Include="Models\VisitViewModels\DetailsVisitViewModel.cs" />
+    <Compile Include="Models\VisitViewModels\IndexVisitViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\NinjectDependencyResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -227,6 +230,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Visits\Index.cshtml" />
+    <Content Include="Views\Visits\PartialCreateTeachers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
