--- a/RAM0230_Project_group_1/Project.Infrastructure.DTO/Project.Infrastructure.DTO.csproj
+++ b/RAM0230_Project_group_1/Project.Infrastructure.DTO/Project.Infrastructure.DTO.csproj
@@ -40,12 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GroupDTO.cs" />
+    <Compile Include="ModeOfStudyDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student\StudentDTO.cs" />
-    <Compile Include="Subject\SubjectDTO.cs" />
-    <Compile Include="User\TeacherDTO.cs" />
-    <Compile Include="User\UserDTO.cs" />
-    <Compile Include="Visit\VisitDTO.cs" />
+    <Compile Include="RoleDTO.cs" />
+    <Compile Include="StudentDTO.cs" />
+    <Compile Include="SubjectDTO.cs" />
+    <Compile Include="SubjectTeacherDTO.cs" />
+    <Compile Include="UserDTO.cs" />
+    <Compile Include="VisitDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
