--- a/RAM0230_Project_group_1/Project.UI.WebMVCApp/Project.UI.WebMVCApp.csproj
+++ b/RAM0230_Project_group_1/Project.UI.WebMVCApp/Project.UI.WebMVCApp.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Models\VisitViewModels\PartialTeachersVisitViewModel.cs" />
     <Compile Include="Models\VisitViewModels\DetailsVisitViewModel.cs" />
     <Compile Include="Models\VisitViewModels\IndexVisitViewModel.cs" />
+    <Compile Include="Models\VisitViewModels\PartialVisitsVisitViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\NinjectDependencyResolver.cs" />
   </ItemGroup>
